populate with default users

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "npx ts-node index.ts",
     "start:dev": "npx nodemon index.ts",
-    "db": "npx knex migrate:latest",
-    "build": "cd src/app;npm run build",
-    "develop": "npm run db && npm run build && npm run start:dev",
+    "create:db": "npx knex migrate:latest && npx knex seed:run",
+    "build:client": "cd src/app;npm run build",
+    "build": "npm run build:client && npm run create:db",
+    "develop": "npm run build && npm run start:dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
