--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "helmet": "^5.0.2",
     "host-validation": "^2.0.1",
     "hpp": "^0.2.3",
-    "knex": "^1.0.5"
+    "knex": "^1.0.5",
+    "uuid": "^8.3.2",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -39,8 +41,14 @@
     "@types/host-validation": "^2.0.1",
     "@types/hpp": "^0.2.2",
     "@types/node": "^17.0.23",
+    "@types/uuid": "^8.3.4",
+    "@types/ws": "^8.5.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.6",
+    "utf-8-validate": "^5.0.9"
   }
 }
