--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node index.ts",
+    "start": "node index.js",
     "start:dev": "npx nodemon index.ts",
     "create:db": "npx knex migrate:latest && npx knex seed:run",
     "build:client": "cd src/app;npm i && npm run build",
-    "build": "npm run build:client && npm run create:db",
-    "develop": "npm run build && npm run start:dev",
+    "precompile": "npm run build:client && npm run create:db",
+    "compile": "tsc",
+    "prepackage": "mkdir -p dist/src/app/build && cp -rp src/app/build dist/src/app && cp package*.json dist",
+    "package": "tar cvf dist.tar dist && gzip dist.tar",
+    "release": "npm run compile && npm run package",
+    "develop": "npm run build:client && npm run create:db && npm run start:dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
