--- a/src/app/package.json
+++ b/src/app/package.json
@@ -21,7 +21,7 @@
     "typescript": "~4.1.5"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "REACT_APP_BASE_URL=http://localhost:3000 PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
