--- a/src/app/package.json
+++ b/src/app/package.json
@@ -10,7 +10,6 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
-    "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
     "react": "^18.0.0",
@@ -21,7 +20,7 @@
     "typescript": "~4.1.5"
   },
   "scripts": {
-    "start": "REACT_APP_BASE_URL=http://localhost:3000 PORT=3001 react-scripts start",
+    "start": "REACT_APP_BASE_URL=http://localhost:8080 PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.0.0"
   }
 }
