--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {"node": ">=17.9.0", "npm": "~8.5.5"},
   "scripts": {
     "start": "node index.js",
     "start:dev": "npx nodemon index.ts",
