--- a/src/app/package.json
+++ b/src/app/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "engines": {"node": ">=17.9.0", "npm": "~8.5.5"},
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
