--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "ws": "^8.5.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.8",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -50,9 +49,11 @@
     "@types/express-session": "^1.17.4",
     "@types/host-validation": "^2.0.1",
     "@types/hpp": "^0.2.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
     "@types/uuid": "^8.3.4",
     "@types/ws": "^8.5.3",
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
