--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "build:client": "cd src/app;npm i && npm run build",
     "precompile": "npm run build:client && npm run create:db",
     "compile": "tsc",
-    "prepackage": "mkdir -p dist/src/app/build && cp -rp src/app/build dist/src/app && npx ts-node release-package.ts",
-    "package": "tar cvf dist.tar dist && gzip dist.tar",
+    "release:scripts": "npx ts-node scripts/release-package.ts && cp scripts/release-install.sh dist/install && cp scripts/release-start.sh dist/start",
+    "prepackage": "mkdir -p dist/src/app/build && cp -rp src/app/build dist/src/app && npm run release:scripts",
+    "package": "rm -rf dist/scripts && tar cvf dist.tar dist && gzip dist.tar",
     "release": "npm run compile && npm run package",
-    "develop": "npm run build:client && npm run create:db && npm run start:dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build:client",
+    "develop": "npm run build && npm run start:dev",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf dist/* >> /dev/null 2>&1;rm dist.tar.gz >> /dev/null 2>&1"
   },
   "keywords": [],
   "author": "",
