--- a/src/app/package.json
+++ b/src/app/package.json
@@ -2,7 +2,10 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "engines": {"node": ">=17.9.0", "npm": "~8.5.5"},
+  "engines": {
+    "node": ">=17.9.0",
+    "npm": "~8.5.5"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -13,11 +16,13 @@
     "@types/react": "^16.14.24",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.2",
     "typescript": "~4.1.5"
   },
   "scripts": {
