remove unused imports

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "start:dev": "npx nodemon index.ts",
     "create:db": "npx knex migrate:latest && npx knex seed:run",
     "build:client": "cd src/app;npm i && npm run build",
-    "precompile": "npm run build:client && npm run create:db",
+    "build": "npm run build:client",
+    "precompile": "npm run build",
     "compile": "tsc",
     "release:scripts": "npx ts-node scripts/release-package.ts && cp scripts/release-install.sh dist/install && cp scripts/release-start.sh dist/start",
     "prepackage": "mkdir -p dist/src/app/build && cp -rp src/app/build dist/src/app && npm run release:scripts",
     "package": "rm -rf dist/scripts && tar cvf dist.tar dist && gzip dist.tar",
     "release": "npm run compile && npm run package",
-    "build": "npm run build:client",
     "develop": "npm run build && npm run start:dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist/* >> /dev/null 2>&1;rm dist.tar.gz >> /dev/null 2>&1"
