--- a/src/app/package.json
+++ b/src/app/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "dayjs": "^1.11.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
