--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start:container": "docker run -v $(pwd)/db:/opt/app/db -p 8080:8080 -d vigilant-cloud",
     "stop:container": "docker ps|grep vigilant-cloud|awk '{print $1}' | xargs docker stop",
     "build:container": "npm run clean && npm run release && npm run contain",
-    "ark": "npm run build:container && npm run start:container"
+    "dockerize": "npm run stop:container >> /dev/null 2>&1;npm run build:container && npm run start:container"
   },
   "keywords": [],
   "author": "",
