--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "basic-backend",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": ">=17.9.0",
-    "npm": ">=8.5.5"
+    "node": "17.9.0",
+    "npm": "8.5.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,9 +17,9 @@
     "develop": "npm run build && npm run start:dev",
     "precompile": "npm run build",
     "compile": "tsc",
-    "release:scripts": "npx ts-node scripts/release-package.ts && cp scripts/release-install.sh dist/install && cp scripts/release-start.sh dist/start",
+    "release:scripts": "npx ts-node scripts/release-package.ts && rm -rf dist/scripts",
     "prepackage": "mkdir -p dist/src/app/build && cp -rp src/app/build dist/src/app && npm run release:scripts",
-    "package": "rm -rf dist/scripts && tar cvf dist.tar dist && gzip dist.tar && mkdir -p release && mv dist.tar.gz release",
+    "package": "tar czvf dist.tar.gz dist/* && mkdir -p release && mv dist.tar.gz release",
     "clean": "rm -rf dist/* >> /dev/null 2>&1;rm dist.tar.gz >> /dev/null 2>&1;rm release/* >> /dev/null 2>&1",
     "release": "npm run compile && npm run package",
     "contain": "cd release;docker build . -t vigilant-cloud",
@@ -33,6 +33,7 @@
   "license": "ISC",
   "dependencies": {
     "@vscode/sqlite3": "^5.0.8",
+    "aws-sdk": "^2.1132.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "connect-session-knex": "^2.1.1",
@@ -47,7 +48,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.5",
     "uuid": "^8.3.2",
-    "ws": "^8.5.0"
+    "ws": "^8.5.0",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -63,7 +65,6 @@
     "@types/ws": "^8.5.3",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
