--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "body-parser": "^1.20.0",
     "connect-session-knex": "^2.1.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.17.3",
     "express-content-length-validator": "^1.0.0",
     "express-enforces-ssl": "^1.1.0",
@@ -47,13 +48,14 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.5",
+    "pg": "^8.7.3",
     "uuid": "^8.3.2",
-    "ws": "^8.5.0",
-    "pg": "^8.7.3"
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/express-enforces-ssl": "^1.1.1",
     "@types/express-session": "^1.17.4",
