--- a/src/app/package.json
+++ b/src/app/package.json
@@ -27,7 +27,7 @@
     "typescript": "~4.1.5"
   },
   "scripts": {
-    "start": "REACT_APP_BASE_URL=http://localhost:8080 PORT=3000 react-scripts start",
+    "start": "REACT_APP_BASE_URL=https://vigilant-cloud.herokuapp.com PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
