--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "start:dev": "npx nodemon index.ts",
+    "start:dev": "npx nodemon -r dotenv/config index.ts",
     "create:db": "npx knex migrate:latest && npx knex seed:run",
     "build:client": "cd src/app;npm i && npm run build",
     "build": "npm run build:client",
@@ -43,6 +43,7 @@
     "express-content-length-validator": "^1.0.0",
     "express-enforces-ssl": "^1.1.0",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "helmet": "^5.0.2",
     "host-validation": "^2.0.1",
     "hpp": "^0.2.3",
