--- a/src/app/package.json
+++ b/src/app/package.json
@@ -22,12 +22,12 @@
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "reactstrap": "^9.0.2",
     "typescript": "~4.1.5"
   },
   "scripts": {
-    "start": "REACT_APP_BASE_URL=https://vigilant-cloud.herokuapp.com PORT=3000 react-scripts start",
+    "start": "REACT_APP_BASE_URL=http://localhost:8080 PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
