--- a/src/app/tsconfig.json
+++ b/src/app/tsconfig.json
@@ -13,13 +13,12 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    // "module": "esnext",
-    "module": "CommonJS",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    // "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve",
+    "noEmit": true
   },
   "include": [
     "src"
