--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.5",
     "pg": "^8.7.3",
-    "uuid": "^8.3.2",
-    "ws": "^8.5.0"
+    "socket.io": "^4.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -65,7 +65,6 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
     "@types/uuid": "^8.3.4",
-    "@types/ws": "^8.5.3",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
