--- a/src/app/package.json
+++ b/src/app/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "reactstrap": "^9.0.2",
+    "socket.io-client": "^4.5.0",
     "typescript": "~4.1.5"
   },
   "scripts": {
