--- a/src/app/package.json
+++ b/src/app/package.json
@@ -3,18 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=17.9.0",
-    "npm": "~8.5.5"
+    "node": "17.9.0",
+    "npm": "8.5.5"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.47",
-    "@types/react": "^16.14.24",
-    "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.11.2",
@@ -49,6 +42,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.20.47",
+    "@types/react": "^16.14.24",
+    "@types/react-redux": "^7.1.23",
     "@types/react-dom": "^18.0.0"
   }
 }
