--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/postgres-adapter": "^0.3.0",
     "@vscode/sqlite3": "^5.0.8",
     "aws-sdk": "^2.1132.0",
     "bcryptjs": "^2.4.3",
