--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "knex": "^1.0.5",
     "pg": "^8.7.3",
     "socket.io": "^4.5.0",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-dist": "^4.11.1",
+    "swagger-ui-express": "^4.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -64,6 +67,8 @@
     "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
