--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.5",
+    "log4js": "^6.5.1",
     "pg": "^8.7.3",
     "socket.io": "^4.5.0",
     "swagger-jsdoc": "^6.2.1",
