--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "ISC",
   "dependencies": {
     "@socket.io/postgres-adapter": "^0.3.0",
+    "@socket.io/redis-adapter": "^7.2.0",
     "@vscode/sqlite3": "^5.0.8",
     "aws-sdk": "^2.1132.0",
     "bcryptjs": "^2.4.3",
@@ -52,6 +53,7 @@
     "knex": "^1.0.5",
     "log4js": "^6.5.1",
     "pg": "^8.7.3",
+    "redis": "^4.1.0",
     "socket.io": "^4.5.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-dist": "^4.11.1",
