--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "log4js": "^6.5.1",
     "pg": "^8.7.3",
     "redis": "^4.1.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.5.0",
-    "static-favicon": "^2.0.0-alpha",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-dist": "^4.11.1",
     "swagger-ui-express": "^4.4.0",
@@ -71,6 +71,7 @@
     "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
+    "@types/serve-favicon": "^2.5.3",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
