--- a/src/app/package.json
+++ b/src/app/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "^5.0.0",
     "reactstrap": "^9.0.2",
     "socket.io-client": "^4.5.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "REACT_APP_BASE_URL=http://localhost:8080 PORT=3000 react-scripts start",
@@ -49,6 +50,7 @@
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-redux": "^7.1.23",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "nth-check": ">=2.0.1"
   }
 }
