--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
       
       - name: upgrade Node to 17.9.0
         run: |
-          npm cache clean -f
-          npm install -g 17.9.0
+          curl -fsSL https://deb.nodesource.com/setup_17.x | sudo -E bash -
+          sudo apt-get install -y nodejs
 
 #      - name: Download Node 17.9.0
 #        run: |
