--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,17 +33,16 @@ jobs:
       - name: upgrade Node to 17.9.0
         uses: actions/setup-node@v3
         with:
+          environment: production
           node-version: 17.9.0
-      - run: echo ${{ secrets.APP_NAME }} - building deployment release
-      - run: npm install
-      - run: npm run build:client
-      - run: npm run compile      
-      - run: echo ${{ secrets.APP_NAME }} - deploying to Heroku release
-
-      - name: deploy w/ Heroku cli
-      - run: echo ${{ secrets.APP_NAME }} - deploying to Heroku release
-      - run: cd dist;HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} heroku git:remote -a ${{ secrets.APP_NAME }}
-      - run: cd dist;HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} git add .
-      - run: cd dist;HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} git commit -am "Github CI - update"
-      - run: cd dist;HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} git push heroku master
+      - run: |
+          echo ${{ secrets.APP_NAME }} - building deployment release
+          npm install
+          npm run build:client
+          npm run compile
+          echo ${{ secrets.APP_NAME }} - deploying to Heroku release
+          cd dist;HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} heroku git:remote -a ${{ secrets.APP_NAME }}
+          cd dist;HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} git add .
+          cd dist;HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} git commit -am "Github CI - update"
+          cd dist;HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} git push heroku master
 
