--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,14 @@ jobs:
           environment: production
           node-version: 17.9.0
       - run: |
-          echo ${{ secrets.APP_NAME }} - building deployment release
+          echo clone heroku to dist
+          HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} heroku git:clone -a ${{ secrets.APP_NAME }} dist
+          echo install and build release...
           npm install
+          npm run clean
           npm run release
           echo ${{ secrets.APP_NAME }} - deploying to Heroku release
-          cd dist;git init
+          cd dist
           HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} heroku git:remote -a ${{ secrets.APP_NAME }}
           HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} git add .
           HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} git commit -am "Github CI - update"
