--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,24 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 17.9.0
+          
+      - name: Add SSH Key
         env: 
-          MY_KEY: ${{secrets.HEROKU_API_KEY}}
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       - run: |
+          mkdir ~/.ssh
+          ssh-keyscan git.heroku.com >> ~/.ssh/known_hosts
+          echo "${{secrets.SSH_KEY}}" > ~/.ssh/github_actions
+          chmod 600 ~/.ssh/github_actions
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          ssh-add ~/.ssh/github_actions
+          
+      - name: heroku app repo
+        env:
+          MY_KEY: ${{secrets.HEROKU_API_KEY}}          
+      - run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub actions"
           HEROKU_API_KEY=${MY_KEY} heroku git:clone -a ts-guestbook dist
           npm install
           npm run clean
