--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,12 +47,10 @@ jobs:
           ssh-add ~/.ssh/github_actions
           
       - name: heroku app repo
-        env:
-          MY_KEY: ${{secrets.HEROKU_API_KEY}}          
       - run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub actions"
-          HEROKU_API_KEY=${MY_KEY} heroku git:clone -a ts-guestbook dist
+          HEROKU_API_KEY=${secrets.HEROKU_API_KEY} heroku git:clone -a ts-guestbook dist
           npm install
           npm run clean
           npm run release
