--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,8 @@ jobs:
           ssh-add ~/.ssh/github_actions
           
       - name: heroku app repo
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       - run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub actions"
