--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,12 @@ jobs:
         env: 
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       - run: |
-          mkdir ~/.ssh
-          ssh-keyscan git.heroku.com >> ~/.ssh/known_hosts
-          echo "${{secrets.SSH_KEY}}" > ~/.ssh/github_actions
-          chmod 600 ~/.ssh/github_actions
+          mkdir /home/runner/.ssh
+          ssh-keyscan git.heroku.com >> /home/runner/.ssh/known_hosts
+          echo "${{secrets.SSH_KEY}}" > /home/runner/.ssh/github_actions
+          chmod 600 /home/runner/.ssh/github_actions
           ssh-agent -a $SSH_AUTH_SOCK > /dev/null
-          ssh-add ~/.ssh/github_actions
+          ssh-add /home/runner/.ssh/github_actions
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub actions"
           HEROKU_API_KEY=${secrets.HEROKU_API_KEY} heroku git:clone -a ts-guestbook dist
