--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,9 @@ jobs:
         env: 
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       - run: |
+          (mkdir 
+          (ls /home/runner/.ssh >> /dev/null 2>&1 || mkdir -p /home/runner/.ssh)
+          (ls /home/runner/.ssh/known_hosts >> /dev/null 2>&1 || touch /home/runner/.ssh/known_hosts)
           ssh-keyscan git.heroku.com >> /home/runner/.ssh/known_hosts
           echo "${{secrets.SSH_KEY}}" > /home/runner/.ssh/github_actions
           chmod 600 /home/runner/.ssh/github_actions
