--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      - name: install Heroku CLI
+        run: curl https://cli-assets.heroku.com/install.sh | sh
+
       - name: generate heroku netrc
         run: |
           cat > /home/runner/.netrc <<EOF
@@ -36,6 +39,7 @@ jobs:
               login $HEROKU_EMAIL
               password $HEROKU_NETRC_PASSWORD
           EOF
+          heroku git:clone -a $HEROKU_APP_NAME dist
         env:
           HEROKU_NETRC_PASSWORD: ${{ secrets.HEROKU_NETRC_PASSWORD }}
           HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
