--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,8 @@ jobs:
       - name: deploy changes
         run: |
           cd dist
+          git config --global user.email "actions@github.com"
+          git config --global user.name "Github actions"
           git add .
           git commit -am "Github CLI - update"
           git push heroku main
