--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           node-version: 17.9.0
       - run: |
           npm install
-          npm run clean
+          rm -rf dist/*
           npm run release
       # Deploy Javascript
       - name: deploy changes
