--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-guestbook",
   "version": "1.0.0",
-  "description": "",
+  "description": "Full stack Typescript",
   "main": "index.js",
   "engines": {
     "node": "17.9.0",
@@ -32,7 +32,7 @@
   },
   "keywords": [],
   "author": "Trevor Martin",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@socket.io/postgres-adapter": "^0.3.0",
     "@socket.io/redis-adapter": "^7.2.0",
