--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
+    "@types/redis": "^4.0.11",
     "@types/serve-favicon": "^2.5.3",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
