--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   "author": "Trevor Martin",
   "license": "MIT",
   "dependencies": {
-    "@log4js-node/redis": "^1.0.0",
     "@socket.io/postgres-adapter": "^0.3.0",
     "@socket.io/redis-adapter": "^7.2.0",
     "@vscode/sqlite3": "^5.0.8",
@@ -72,7 +71,6 @@
     "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
-    "@types/redis": "^4.0.11",
     "@types/serve-favicon": "^2.5.3",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
@@ -85,5 +83,11 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.6",
     "utf-8-validate": "^5.0.9"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
   }
 }
