--- a/src/app/package.json
+++ b/src/app/package.json
@@ -7,10 +7,12 @@
     "npm": "8.5.5"
   },
   "dependencies": {
+    "autoprefixer": "10.4.5",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.11.2",
+    "nth-check": ">=2.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
@@ -18,8 +20,7 @@
     "react-scripts": "^5.0.0",
     "reactstrap": "^9.0.2",
     "socket.io-client": "^4.5.0",
-    "typescript": "~4.1.5",
-    "nth-check": ">=2.0.1"
+    "typescript": "~4.1.5"
   },
   "scripts": {
     "start": "REACT_APP_BASE_URL=http://localhost:8080 PORT=3000 react-scripts start",
@@ -49,8 +50,14 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
-    "@types/react-redux": "^7.1.23",
     "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.23",
     "nth-check": ">=2.0.1"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
   }
 }
