--- a/src/app/package.json
+++ b/src/app/package.json
@@ -7,13 +7,14 @@
     "npm": "8.5.5"
   },
   "dependencies": {
-    "autoprefixer": "10.4.5",
     "@reduxjs/toolkit": "^1.8.1",
+    "autoprefixer": "10.4.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "dayjs": "^1.11.2",
     "nth-check": ">=2.0.1",
     "react": "^18.0.0",
+    "react-date-picker": "^8.4.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
