--- a/src/app/package.json
+++ b/src/app/package.json
@@ -16,6 +16,7 @@
     "react": "^18.0.0",
     "react-date-picker": "^8.4.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.15.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
@@ -52,6 +53,7 @@
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-dom": "^18.0.0",
+    "@types/react-modal": "^3.13.1",
     "@types/react-redux": "^7.1.23",
     "nth-check": ">=2.0.1"
   },
